--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,16 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+            <!--sortowanie -->
+            <h3>Sorting</h3>
+            <div class="clearfix">
+                <a th:text="'DATE DESC'" th:href="@{'/page='+${pageIndex}+'&dateAdded&DESC'}" type="button" class="btn btn-outline-secondary waves-effect px-3"></a>
+                <a th:text="'DATE ASC'" th:href="@{'/page='+${pageIndex}+'&dateAdded&ASC'}" type="button" class="btn btn-outline-secondary waves-effect px-3"></a>
+                <a th:text="'GRADES DESC'" th:href="@{'/page='+${pageIndex}+'&likes&DESC'}" type="button" class="btn btn-outline-secondary waves-effect px-3"></a>
+                <a th:text="'GRADES ASC'" th:href="@{'/page='+${pageIndex}+'&likes&ASC'}" type="button" class="btn btn-outline-secondary waves-effect px-3"></a>
+            </div>
+            <h3>Posts</h3>
+            <!--sortowanie -->
             <div th:if="${errorMessage != null}" th:text="${errorMessage}"
                  style="font-size:14px" class="alert alert-danger" role="alert"> error
             </div>
@@ -29,12 +39,12 @@
                 <div class="clearfix" th:if="${auth != null}">
                     <a th:if="${!auth.getUsername().equals(post.getAuthor().getEmail())}"
                        class="fa fa-thumbs-up"
-                       th:href="@{'/addLike&'+${post.getPostId()}}"
+                       th:href="@{'/addLike&'+${pageIndex}+'&'+${post.getPostId()}}"
                        th:text="${post.getLikes().size()}"> likes
                     </a>
                     <a th:if="${!auth.getUsername().equals(post.getAuthor().getEmail())}"
                        class="fa fa-thumbs-down"
-                       th:href="@{'/addDislike&'+${post.getPostId()}}"
+                       th:href="@{'/addDislike&'+${pageIndex}+'&'+${post.getPostId()}}"
                        th:text="${post.getDislikes().size()}"> dislikes
                     </a>
                     <a th:if="${auth.getAuthorities().toString().toUpperCase().contains('ADMIN') ||
@@ -43,6 +53,7 @@
                     <a th:if="${auth.getAuthorities().toString().toUpperCase().contains('ADMIN') ||
                         auth.getUsername().equals(post.getAuthor().getEmail())}"
                        class="fas fa-edit" aria-hidden="true" th:href="@{'/editPost&'+${post.getPostId()}}">edit</a>
+                    <a th:text="${'RESULT ' + (post.getLikes().size() - post.getDislikes().size())}"> GRADE </a>
                     <div th:each="follower : ${post.getLikes()}">
                     <a th:if="${follower.getEmail().equals(auth.getUsername())}"  th:text="'LIKED!'"></a>
                     </div>
@@ -57,13 +68,13 @@
                 <a th:each="index : ${pagesIndexes}"
                    th:if="${pageIndex == index}"
                    th:text="${index}"
-                   th:href="@{'/page='+${index}}"
+                   th:href="@{'/page='+${index}+'&'+${field}+'&'+${sortDirection}}"
+
                    type="button"
                    class="btn btn-outline-secondary waves-effect px-3"></a>
                 <a th:each="index : ${pagesIndexes}"
-                   th:if="${pageIndex != index}"
                    th:text="${index}"
-                   th:href="@{'/page='+${index}}"
+                   th:href="@{'/page='+${index}+'&'+${field}+'&'+${sortDirection}}"
                    type="button"
                    class="btn btn-outline-warning waves-effect px-3"></a>
             </div>
