--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -16,15 +16,22 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto" th:if="${postId == null}">
           <h1>Add post form</h1>
-          <form th:action="@{/addPost}" th:method="POST" th:object="${postDto}">
+          <form th:action="@{/addPost}" th:method="POST" th:object="${postDto}" enctype="multipart/form-data">
               <div class="form-group">
                   <div th:errors="*{title}" style="font-size:10px" class="alert alert-danger" role="alert"> title error </div>
                   <input class="form-control" th:type="text" th:field="*{title}" placeholder="insert title here"><br>
                   <select class="form-control" th:field="*{category}">
                       <option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat.getCategoryName()}"></option>
                   </select><br>
-                  <div th:errors="*{content}" style="font-size:10px" class="alert alert-danger" role="alert"> content error </div>
-                  <textarea class="form-control" th:field="*{content}" placeholder="insert content here"></textarea><br>
+                  <div th:errors="*{content}"  style="font-size:10px" class="alert alert-danger" role="alert"> content error </div>
+                  <textarea
+                          class="form-control"
+                          id="content"
+                          rows="5"
+                          th:field="*{content}"
+                          placeholder="insert content here">
+                    </textarea><br>
+                  <input type="file" th:field="*{imagePath}" name="file"><br>
                   <input class="btn btn-success btn-rounded" th:type="submit" th:value="'add post'">
               </div>
           </form>
@@ -38,14 +45,20 @@
                     <select class="form-control" th:field="*{category}">
                         <option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat.getCategoryName()}"></option>
                     </select><br>
-                    <div th:errors="*{content}" style="font-size:10px" class="alert alert-danger" role="alert"> content error </div>
-                    <textarea class="form-control" th:field="*{content}" placeholder="insert content here"></textarea><br>
+                    <div th:errors="*{content}"  style="font-size:10px" class="alert alert-danger" role="alert"> content error </div>
+                    <textarea
+                            class="form-control"
+                            rows="5"
+                            th:field="*{content}"
+                            placeholder="insert content here">
+                    </textarea><br>
                     <input class="btn btn-success btn-rounded" th:type="submit" th:value="'update post'">
                 </div>
             </form>
         </div>
     </div>
   </div>
+
 
   <!-- Footer -->
   <footer th:replace="fragments/footer.html :: footer"></footer>
